<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:elevation="0dp"
                android:background="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:elevation="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/action_bar_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/btn_cancel"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/btn_cancel_string"
                            android:textAllCaps="false"
                            android:textColor="@android:color/darker_gray" />

                        <Button
                            android:id="@+id/btn_pick_sound"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/btn_pick_sound_string"
                            android:textAllCaps="false"
                            android:textColor="@android:color/black" />

                    </RelativeLayout>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_box"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/et_search_box_hint"
                app:boxBackgroundColor="#F2F2F2"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@android:color/white"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBar"
                app:startIconDrawable="@drawable/ic_baseline_search_24"
                app:startIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_search_box_hint"
                    android:textColor="@android:color/darker_gray"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_box">

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                        android:text="@string/btn_bollywood_top_20_string"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                        android:text="@string/btn_trending_string"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                        android:text="@string/btn_featured_string"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                        android:text="@string/btn_new_release_string"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                        android:text="@string/btn_comedy_string"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                        android:text="@string/btn_challenge_string"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                        android:text="@string/btn_hear_it_first_string"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_more"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                        android:text="@string/btn_7_more_string"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/third_row_layout"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                        android:text="@string/btn_bollywood_top_20_string"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                        android:text="@string/btn_bollywood_top_20_string"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                        android:text="@string/btn_bollywood_top_20_string"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_more_horiz_24"
                        android:text="@string/btn_bollywood_top_20_string"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    android:background="#F2F2F2" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabGravity="fill"
                    app:tabMaxWidth="0dp"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="@android:color/black"
                    app:tabTextColor="@android:color/darker_gray" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewpager2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>